<resources>
    <string name="app_name">Lizarda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="beranda_fragment">Beranda Fragment</string>
    <string name="action_search">Search</string>
    <string name="title_activity_detail_produk">Detail</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"

    </string>
    <string name="sign_in">Sign in</string>
    <string name="label_harga">Harga</string>
    <string name="content_label_harga">Rp. 5000000</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="comment_user">Screenshots on the iPhone X don’t have the notch... but they do look awkwardly tall.</string>
    <string name="nama_user">danielemillio</string>
    <string name="hint_comment">comment . . .</string>
    <string name="send">Send</string>
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="en_buy">Buy</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail_category_list">List</string>
    <string name="title_activity_add_product">Add Product</string>
    <string name="uploading">Uploading ...</string>

    <string name="status_sold">Sold</string>
    <string name="action_edit">Edit</string>

    <string-array name="item_spinner_jenis_produk">
        <item>Bunglon</item>
        <item>Ular</item>
        <item>Iguana</item>
        <item>Kura-kura</item>
    </string-array>
    <string name="title_activity_admin">Admin - Product List</string>
    <string name="action_more">more</string>
</resources>
