<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_action_beranda"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/title_profile" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/title_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
