<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lizarda.lizarda.ui.detail_produk.DetailProdukActivity"
    tools:showIn="@layout/activity_detail_produk">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_description_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_grey_300" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_harga"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_harga_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/content_label_harga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

        </android.support.constraint.ConstraintLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_grey_300" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_harga"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/content_label_harga"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_grey_300" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="Comments"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_comment_detail_produk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_list_comment_detail_produk" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/et_comment_detail_produk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_comment" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_send_comment_detail_produk"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/send" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp" />

        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
